<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView

        android:id="@+id/noticeTextView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="40sp"
        android:layout_marginBottom="50dp" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:text="@string/edit_title"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/bodyEditText"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="7dp"
        android:text="@string/edit_body" />

    <Button
        android:id="@+id/submitPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_post" />

    <LinearLayout
        android:id="@+id/editedView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/titleEditedText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="7dp" />

        <EditText
            android:id="@+id/bodyEditedText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="7dp" />


    </LinearLayout>

</LinearLayout>